--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.11.0",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "express": "^4.18.2",
+    "framer-motion": "^9.0.1",
+    "gray-matter": "^4.0.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.9"
+  },
+  "devDependencies": {
+    "prisma": "^4.11.0"
   }
 }
