--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
@@ -23,7 +24,9 @@
     "next": "13.1.6",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
