--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:/path/to/dev.db"
+DATABASE_URL="file:./dev.db"
 
 JWT_SECRET =efec21b0-9805-49e8-8022-b308dfe67d41
